                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.4.0

  *) Fix a segfault in the DBD testcase when the DBD modules were not present.
     [Graham Leggett]

  *) Add DTrace Probes to Hooks, making it easier to inspect APR Hook based
     applications with DTrace. [Theo Schlossnagle <jesus omniti.com>]

  *) Add ODBC DBD driver [Tom Donovan]

  *) Older OpenLDAP implementations may have ldap_set_rebind_proc() with two
     args. Provide detection code and alternative implementation.
     [Ruediger Pluem]

  *) Add Berkeley DB 4.7 support.
     [Arfrever Frehtes Taifersar Arahesis <arfrever.fta gmail.com>]

  *) PostgreSQL rows (internally) start from zero, not one. Account for it in
     row fetching function. [Bojan Smojver]

  *) Detection of PostgreSQL may fail if LIBS contains all libs returned by
     pg_config. Use it only as the last resort. [Bojan Smojver]

  *) When searching for DSOs, look in apr-util-APU_MAJOR_VERSION subdirectory
     of each component of APR_DSOPATH. PR 45327
     [Joe Orton, William Rowe, Bojan Smojver]

  *) Give MySQL DBD driver reconnect option. PR 45407
     [Bojan Smojver]

  *) Implement resource list when threads are unavailable. PR 24325
     [Bojan Smojver]

Changes with APR-util 1.3.0

  *) apr_reslist: destroy all resources in apr_cleanup.
      PR 45086 [Nick Kew]

  *) Add apr_brigade_split_ex for reusing existing brigades in situation where
     brigades need to be split often during the lifetime of a pool.
     [Ruediger Pluem]

  *) Amend apr_reslist to expire resources whose idle time exceeds ttl.
     PR 42841 [Tom Donovan, Nick Kew, Ruediger Pluem]

  *) Modularize ldap's stub with the dbd dso modular structure, and teach
     the apu dso's to respect the system specific shared lib path var.
     To link to an application without ldap libs, query 
     `apu-1-config --avoid-ldap --libs` (in addition to the usual linker